--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-elements": "^3.4.2",
     "react-native-pager-view": "5.0.12",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
